# little_fs_stm32

./: CMakeLists.txt  README.md
inc/: lfs.h  lfs_init.h  lfs_util.h
src/: lfs_init.c  lfs_util.c
